# magneton

./: .gitignore  .gitmodules  README.md  correlations.ipynb  dataset.py  pyproject.toml  requirements.txt  setup.py  train.py  visualize_embeddings.py
configs/: config.yaml  esm_config.yaml  gearnet_config.yaml
examples/: datasets.ipynb  esmc_embeddings.ipynb
experiments/: create_dataset_splits.ipynb  create_label_subsets.ipynb  curate_swissprot_set.ipynb  explore_clusters.ipynb  explore_evals.ipynb  go_perf_by_interpro.ipynb  performance_breakdowns.ipynb  understand_missing_afdb.ipynb
magneton/: ARCHITECTURE.md  cli.py  config.py  constants.py  core_types.py  custom_types.py  esm_embed.py  gearnet_embed.py  interpro_parsing.py  mlp.py  pipeline.py  summary_stats.py  train_script.sh  types.py  utils.py
magneton/config/: config.py
magneton/configs/: config.yaml
magneton/configs/base_model/: esm2_150m.yaml  esm2_3b.yaml  esm2_650m.yaml  esmc.yaml  esmc_300m.yaml  prosst_2048.yaml  (+3 more)
magneton/data/: __init__.py  data_modules.py  id_loader.py  meta_dataset.py  protein_dataset.py  sequence_only.py  substructure.py  supervised_dataset.py  utils.py
magneton/embedders/: base_embedder.py  esm2_embedder.py  esm_embedder.py  esm_transformers_base.py  esmc_embedder.py  factory.py  gearnet_embedder.py  prosst_embedder.py  saprot_embedder.py  utils.py
magneton/evals/: downstream_classifiers.py  metrics.py  substructure_classification.py  supervised_classification.py  umap.py  zero_shot_evaluation.py
magneton/evaluations/: metrics.py  substructure_classification.py  supervised_classification.py  zero_shot_evaluation.py
magneton/io/: internal.py  internal_legacy.py  interpro.py  mmcif.py
magneton/models/: embedding_mlp.py  evaluation_classifier.py  substructure_classifier.py  utils.py
magneton/training/: data_module.py  embedding_mlp.py  lightning_model.py  trainer.py
notebooks/: correlations.ipynb  example_inference.ipynb  prosst_test.ipynb  prune_ckpt.ipynb
scripts/: add_secondary_structs.py  calc_stats.py  compute_prosst_struct_toks.py  filter_proteins.py  make_interpro_labels.py  parse_interpro.py  shard_pickle.py
scripts/dataset_processing/: README.md  add_secondary_structs.py  calc_stats.py  create_label_subsets.ipynb  curate_swissprot_set.ipynb  filter_proteins.py  make_interpro_labels.py  parse_interpro.py
scripts/prosst/: compute_prosst_struct_toks.py
scripts/saprot/: foldseek_db_to_fa.py  saprot_foldseek_for_biolip.py  saprot_foldseek_for_contact.py
tests/: mocks.py
tests/evaluations/: mocks.py  test_downstream_classifiers.py  test_end_to_end.py  test_supervised_classification.py
tests/models/: test_head_classifiers.py  test_substructure_classifier.py
(+64 files in other folders)
