[project]
name = "magneton"
version = "0.1.0"
description = "Substructure-aware protein representation learning"
authors = [
    {name = "Robert Calef", email = "rcalef@mit.edu"},
    {name = "Arthur Liang", email = "artliang@mit.edu"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esm>=3.1.2",
    "fire>=0.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pdbecif>=1.5",
    "pysam>=0.22.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Source-code = "https://github.com/rcalef/magneton/"

[tool.setuptools]
packages = ["magneton"]
