[project]
name = "magneton"
version = "0.1.0"
description = "Substructure-aware protein representation learning"
authors = [
    {name = "Robert Calef", email = "rcalef@mit.edu"},
    {name = "Arthur Liang", email = "artliang@mit.edu"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biotite<1.0.0",
    "certifi>=2025.4.26",
    "easydict>=1.13",
    "esm>=3.1.2",
    "flash-attn",
    "fire>=0.7.0",
    "gpustat>=1.1.1",
    "h5py>=3.13.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "pathos>=0.3.4",
    "pdbecif>=1.5",
    "pysam>=0.22.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "torch==2.6.0",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torchdata",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
    "wandb>=0.19.6",
]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Source-code = "https://github.com/rcalef/magneton/"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.setuptools]
packages = ["magneton"]

[tool.uv]
no-build-isolation-package = ["torch-cluster", "torch-scatter", "flash-attn"]
find-links = ["https://data.pyg.org/whl/torch-2.6.0+cu124.html"]

[tool.uv.sources]
torchdata = { index = "torchdata_nightly" }

[[tool.uv.index]]
name = "torchdata_nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
